# TennisVision

./: .env.example  .gitignore  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
experiments/detection/: experiments.md
experiments/video_tracking/: experiments.md
notebooks/shot_classification/: train.ipynb
src/tennisvision/api/: app.py
src/tennisvision/core/: data.py  engine.py  experiments.py  explainability.py  mlflow_cli.py  mlflow_utils.py  models.py  tracking.py  utils.py  viz.py
src/tennisvision/scripts/: infer.py  run_experiment.py  set_alias.py  tune_hpo.py
src/tennisvision/tasks/detection/: data.py  evaluation.py  experiments.py  inference.py  types.py  visualization.py
src/tennisvision/tasks/detection/api/: app.py  schemas.py
src/tennisvision/tasks/detection/backends/: torchvision_detection.py  ultralytics_yolo.py
src/tennisvision/tasks/detection/configs/tracking/: bytetrack_tennis.yaml
src/tennisvision/tasks/detection/scripts/: evaluate.py  infer.py  run_experiment.py
src/tennisvision/tasks/shot_classification/: build_commons_dataset.py  data.py  engine.py  experiments.py  models.py
src/tennisvision/tasks/shot_classification/api/: app.py  schemas.py
src/tennisvision/tasks/shot_classification/scripts/: explain.py  infer.py  run_experiment.py  set_alias.py  tune_hpo.py
src/tennisvision/tasks/video_detection/: postprocessing.py  tracking.py  types.py  visualization.py
src/tennisvision/tasks/video_detection/api/: app.py  schemas.py
src/tennisvision/tasks/video_detection/backends/: ultralytics_video.py
src/tennisvision/tasks/video_detection/configs/tracking/: botsort_tennis.yaml  bytetrack_tennis.yaml
src/tennisvision/tasks/video_detection/scripts/: postprocess_tracks.py  track_and_postprocess_video.py  track_video.py
tennisvision/: __init__.py
tools/detection/: auto_label_players.py  check_yolo_dataset.py  prepare_cvat_export.py  prepare_cvat_import.py
