[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tennisvision"
version = "0.1.0"
description = "Computer Vision in Tennis"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Aleksandra Ciesińska" }]

dependencies = [
  "numpy>=1.26",
  "pillow>=10",
  "tqdm>=4.66",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "pyyaml>=6",
  "rich>=13",
  "torch>=2.3",
  "torchvision>=0.18",
  "torchmetrics",
  "ruff",
  "albumentations>=2.0.8",
  "mlflow>=3.9.0",
  "optuna>=4.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.8",
  "pre-commit>=3.6",
]

[project.scripts]
tennisvision-run = "tennisvision.scripts.run_experiment:main"
tennisvision-tune_hpo = "tennisvision.scripts.tune_hpo:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 150
target-version = "py311"
extend-exclude = [
  ".venv",
  "artifacts",
  "data",
  "notebooks",
  "*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]

[tool.ruff.format]
exclude = ["*.ipynb"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
